[gd_scene load_steps=2 format=3 uid="uid://clx4mr3aq3ylo"]

[ext_resource type="Script" path="res://Scenes/Main/ServerUI.gd" id="1_eqfcx"]

[node name="ServerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eqfcx")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 104.0
offset_right = 134.0
offset_bottom = 147.0
text = "Host"

[node name="Join" type="Button" parent="."]
offset_left = 64.0
offset_top = 168.0
offset_right = 134.0
offset_bottom = 211.0
text = "Join"

[node name="PartyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 141.0
offset_top = 113.0
offset_right = 188.0
offset_bottom = 136.0
text = "Party"

[node name="IPLineEdit" type="LineEdit" parent="."]
offset_left = 176.0
offset_top = 168.0
offset_right = 388.0
offset_bottom = 199.0
text = "127.0.0.1"

[node name="IPLabel" type="Label" parent="."]
offset_left = 144.0
offset_top = 176.0
offset_right = 191.0
offset_bottom = 199.0
text = "IP"

[node name="PartyTypeButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 112.0
offset_right = 321.0
offset_bottom = 143.0
item_count = 2
selected = 0
popup/item_0/text = "Light Party"
popup/item_0/id = 0
popup/item_1/text = "Full Party"
popup/item_1/id = 1

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 232.0
offset_right = 387.0
offset_bottom = 280.0
text = "Status: "

[node name="PortLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 112.0
offset_right = 376.0
offset_bottom = 135.0
text = "Port"

[node name="PortLineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 112.0
offset_right = 451.063
offset_bottom = 143.0
text = "1892"

[node name="NameLineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 40.0
offset_right = 319.0
offset_bottom = 71.0
text = "Nanamo"
max_length = 13

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 48.0
offset_right = 111.0
offset_bottom = 71.0
text = "Name"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
